# DATN_ESP32

./: CMakeLists.txt  README.md  backup.txt  sdkconfig  sdkconfig.old
components/ble_test/: CMakeLists.txt  ble_test.c
components/ble_test/include/: ble_test.h
components/datn_sntp/: CMakeLists.txt  datn_sntp.c
components/datn_sntp/include/: datn_sntp.h
components/lcd/: CMakeLists.txt  lcd.c
components/lcd/include/: lcd.h
components/mqtt_handle/: CMakeLists.txt  cert_test.txt  mqtt_datn_io.pem  mqtt_handle.c
components/mqtt_handle/include/: mqtt_handle.h
components/uart_handle/: CMakeLists.txt  uart_handle.c
components/uart_handle/include/: uart_handle.h
components/w25q32/: CMakeLists.txt  w25q32.c
components/w25q32/include/: w25q32.h
components/wifi_sta/: CMakeLists.txt  wifi_sta.c
components/wifi_sta/include/: wifi_sta.h
main/: CMakeLists.txt  gatts_demo.c
